# chaoxing-web

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER.md  DOCKER_USAGE.md  Dockerfile  QUICKSTART.md  README.md  UPSTREAM_SYNC_GUIDE.md  WEB_ARCHITECTURE.md  app.py  config_template.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  requirements_web.txt  start_web.py
.github/workflows/: claude.yml  docker-publish.yml  sync-upstream.yml
api/: answer.py
templates/: index.html
tests/: test_connection.py  test_deps.py  test_real_output.py
web/: app.py  professional_web.html  professional_web_standalone.py  requirements.txt
web/static/css/: style.css
web/static/js/: app.js
